--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^7.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "3.4.1"
   },
   "scripts": {
